--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0b0c10; --card:#121419; --muted:#9aa3b2; --text:#e6e9ef; --brand:#6ae3ff; --accent:#b8ff6a;
-      --shadow: 0 10px 30px rgba(0,0,0,.25);
+      /* Light theme palette */
+      --bg:#f7f8fb; --card:#ffffff; --muted:#515e6d; --text:#101826; --brand:#0b84fe; --accent:#00a870;
+      --line:#e7eaf0;
+      --shadow: 0 10px 30px rgba(16,24,38,.08);
       --maxw: 1080px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:"Pretendard",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Noto Sans KR",Arial,sans-serif;}
     a{color:inherit;text-decoration:none}
     .container{max-width:var(--maxw);margin:0 auto;padding:0 20px}
-    header{position:sticky;top:0;background:rgba(11,12,16,.7);backdrop-filter:saturate(160%) blur(10px);border-bottom:1px solid #1d2026;z-index:20}
+    header{position:sticky;top:0;background:rgba(255,255,255,.8);backdrop-filter:saturate(160%) blur(10px);border-bottom:1px solid var(--line);z-index:20}
     .nav{display:flex;align-items:center;justify-content:space-between;height:58px}
     .brand{display:flex;gap:10px;align-items:center;font-weight:700}
     .badge{font-size:12px;background:#1d2026;border:1px solid #2b313b;padding:3px 8px;border-radius:999px;color:var(--muted)}
@@ -27,7 +29,7 @@
     nav a:hover{opacity:1;color:#fff}
 
     .hero{display:grid;grid-template-columns:1.3fr .7fr;gap:28px;align-items:center;padding:80px 0}
-    .hero .card{background:linear-gradient(145deg,#0f1117,#0c0e13 60%);border:1px solid #1d2026;border-radius:18px;padding:28px;box-shadow:var(--shadow)}
+    .hero .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:20px;box-shadow:var(--shadow)}
     .title{font-size:36px;line-height:1.15;margin:0 0 12px}
     .subtitle{color:var(--muted);margin:0 0 20px}
     .pill{display:inline-flex;gap:8px;flex-wrap:wrap}
@@ -91,10 +93,11 @@
           <a class="btn" href="#contact">이메일 연락</a>
         </div>
       </div>
-      <div class="card">
-        <h2 class="section-title">한 줄 소개</h2>
-        <p>청주대학교 시스템반도체 석사 졸업 예정. FPGA/VHDL로 설계한 CRC‑16 + FIFO UART를 STM32 FMC로 구동하고, DP83640 PHY 기반 PTP 동기화를 구현합니다. 현장 친화적인 디버깅(Logic Analyzer, SignalTap, Wireshark)과 문서화를 중시합니다.</p>
-        <p class="mono">SK하이닉스 지원 트랙: 제조(양산기술) · 제조(기반기술)</p>
+      <div class="card" style="display:flex;align-items:center;justify-content:center;">
+        <figure style="text-align:center;margin:0">
+          <img src="portrait.jpg" alt="증명사진" style="width:180px;height:180px;border-radius:50%;object-fit:cover;border:6px solid #fff;box-shadow:0 6px 16px rgba(0,0,0,.12)"/>
+          <figcaption style="margin-top:10px;color:var(--muted);font-size:12px">portrait.jpg 파일을 프로젝트 루트에 넣으면 표시됩니다.</figcaption>
+        </figure>
       </div>
     </section>
 
