--- a/index.html
+++ b/index.html
@@ -2,181 +2,109 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>유도우 | 포트폴리오</title>
-  <meta name="description" content="FPGA/VHDL, STM32, PTP(IEEE1588), PLC 기반 화재감지 시스템 프로젝트 포트폴리오" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>유도우 · 포트폴리오</title>
+  <meta name="description" content="임베디드 시스템 · FPGA/VHDL · 통신( UART/I2C ) 포트폴리오" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      /* Light theme palette */
-      --bg:#f7f8fb; --card:#ffffff; --muted:#515e6d; --text:#101826; --brand:#0b84fe; --accent:#00a870;
-      --line:#e7eaf0;
-      --shadow: 0 10px 30px rgba(16,24,38,.08);
-      --maxw: 1080px;
+      --bg:#f7fafc;          /* 밝은 배경 */
+      --card:#ffffff;
+      --ink:#1a202c;         /* 진한 글자 */
+      --muted:#4a5568;       /* 보조 글자 */
+      --brand:#2b6cb0;       /* 포인트 색 */
+      --chip:#edf2f7;
+      --ring:rgba(43,108,176,0.25);
+      --radius:20px;
+      --shadow:0 10px 30px rgba(0,0,0,0.07);
+      --shadow-sm:0 6px 16px rgba(0,0,0,0.06);
+      --max:1080px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:"Pretendard",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Noto Sans KR",Arial,sans-serif;}
-    a{color:inherit;text-decoration:none}
-    .container{max-width:var(--maxw);margin:0 auto;padding:0 20px}
-    header{position:sticky;top:0;background:rgba(255,255,255,.8);backdrop-filter:saturate(160%) blur(10px);border-bottom:1px solid var(--line);z-index:20}
-    .nav{display:flex;align-items:center;justify-content:space-between;height:58px}
-    .brand{display:flex;gap:10px;align-items:center;font-weight:700}
-    .badge{font-size:12px;background:#1d2026;border:1px solid #2b313b;padding:3px 8px;border-radius:999px;color:var(--muted)}
-    nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
-    nav a{font-weight:600;color:#cdd6f4;opacity:.9}
-    nav a:hover{opacity:1;color:#fff}
-
-    .hero{display:grid;grid-template-columns:1.3fr .7fr;gap:28px;align-items:center;padding:80px 0}
-    .hero .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:20px;box-shadow:var(--shadow)}
-    .title{font-size:36px;line-height:1.15;margin:0 0 12px}
-    .subtitle{color:var(--muted);margin:0 0 20px}
-    .pill{display:inline-flex;gap:8px;flex-wrap:wrap}
-    .pill span{border:1px solid #273042;background:#12151c;color:#cfe6ff;border-radius:999px;padding:6px 10px;font-size:12px}
-    .cta{display:flex;gap:12px;margin-top:22px}
-    .btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:12px;border:1px solid #2a2f39;background:#151923;color:#fff;font-weight:600}
-    .btn.primary{background:linear-gradient(180deg,#1f9cf0,#0071e3);border-color:#0e75d8}
-    .btn:hover{transform:translateY(-1px)}
-
-    .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:20px}
-    section{padding:40px 0}
-
-    .section-title{font-size:22px;margin:0 0 14px}
-    .card{background:var(--card);border:1px solid #1d2026;border-radius:16px;padding:20px;box-shadow:var(--shadow)}
-    .kicker{font-size:12px;color:var(--muted);text-transform:uppercase;letter-spacing:.08em}
-    .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
-
-    .project{display:flex;flex-direction:column;gap:8px}
-    .project h3{margin:0}
-    .meta{font-size:12px;color:var(--muted)}
-    .tag{border:1px solid #2a2f39;border-radius:999px;padding:3px 8px;font-size:12px;color:#cfe6ff;background:#12151c;margin-right:6px}
-
-    footer{padding:40px 0;color:#aab4c6;border-top:1px solid #1d2026}
-
-    @media (max-width:900px){
-      .hero{grid-template-columns:1fr;}
+    html,body{height:100%}
+    body{
+      margin:0; font-family:"Pretendard",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      color:var(--ink); background:linear-gradient(180deg,#ffffff, var(--bg) 60%);
+      -webkit-font-smoothing:antialiased; line-height:1.6;
+    }
+    a{color:var(--brand); text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:var(--max); margin:0 auto; padding:24px}
+    header.hero{
+      display:grid; gap:28px; grid-template-columns:140px 1fr; align-items:center;
+      background:var(--card); padding:24px; border-radius:var(--radius); box-shadow:var(--shadow);
+    }
+    .avatar{
+      width:140px; height:140px; border-radius:18px; background:#e2e8f0 center/cover no-repeat;
+      box-shadow:var(--shadow-sm); border:2px solid #fff;
+    }
+    .title h1{margin:0 0 8px; font-size:36px; letter-spacing:-0.5px}
+    .title p{margin:6px 0; color:var(--muted)}
+    .quick{
+      display:flex; flex-wrap:wrap; gap:10px; margin-top:10px
+    }
+    .chip{
+      background:var(--chip); border-radius:999px; padding:8px 12px; font-size:13px; color:#2d3748
+    }
+    .grid{display:grid; gap:22px; grid-template-columns:1fr 1fr; margin-top:26px}
+    .card{
+      background:var(--card); border-radius:var(--radius); padding:22px; box-shadow:var(--shadow);
+    }
+    .card h2{margin:0 0 14px; font-size:20px}
+    .list{display:grid; gap:12px}
+    .item h3{margin:0 0 4px; font-size:16px}
+    .item p{margin:0; color:var(--muted); font-size:14px}
+    .skills{display:flex; flex-wrap:wrap; gap:8px}
+    .skill{background:var(--chip); border-radius:10px; padding:8px 10px; font-size:13px}
+    footer{
+      margin:28px auto 8px; max-width:var(--max); color:var(--muted); font-size:13px; text-align:center
+    }
+    .section{margin-top:22px}
+    .badge{display:inline-block; background:#ebf8ff; color:#234e77; padding:2px 8px; border-radius:8px; font-size:12px; margin-left:8px}
+    .pill{display:inline-block; padding:4px 10px; border-radius:999px; background:#e6fffa; color:#285e61; font-size:12px; margin-right:6px}
+    .cta{
+      margin-top:12px; display:flex; gap:10px; flex-wrap:wrap
+    }
+    .btn{
+      display:inline-flex; align-items:center; gap:8px; background:var(--brand); color:#fff;
+      border:none; border-radius:10px; padding:10px 14px; font-weight:600; box-shadow:var(--shadow-sm);
+      transition:transform .04s ease;
+    }
+    .btn:active{transform:translateY(1px)}
+    .ghost{background:#e2e8f0; color:#1a202c}
+    @media (max-width:820px){
+      header.hero{grid-template-columns:1fr}
+      .avatar{justify-self:center}
+      .grid{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="brand"><span>Yu Do‑Woo</span><span class="badge">Portfolio</span></div>
-      <nav aria-label="주요 섹션">
-        <ul>
-          <li><a href="#about">소개</a></li>
-          <li><a href="#projects">프로젝트</a></li>
-          <li><a href="#experience">경험</a></li>
-          <li><a href="#pubs">논문/발표</a></li>
-          <li><a href="#skills">스킬</a></li>
-          <li><a href="#contact">연락처</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container" style="padding-top:28px">
-    <div class="grid" style="grid-template-columns: 300px 1fr; gap:28px; align-items:start">
-      <!-- Sidebar like the example site -->
-      <aside class="card" style="position:sticky; top:88px; height:fit-content;">
-        <figure style="text-align:center;margin:0 0 14px 0">
-          <img src="portrait.jpg" alt="증명사진" style="width:160px;height:160px;border-radius:50%;object-fit:cover;border:6px solid #fff;box-shadow:0 6px 16px rgba(0,0,0,.12)"/>
-          <figcaption class="mono" style="color:var(--muted);font-size:12px;margin-top:8px">portrait.jpg 교체 가능</figcaption>
-        </figure>
-        <h2 style="margin:6px 0 0 0;">유도우</h2>
-        <p class="subtitle" style="margin:6px 0 12px 0">Embedded / FPGA / PTP</p>
-        <div style="display:flex;flex-wrap:wrap;gap:6px">
-          <a class="btn" href="resume.pdf" download>이력서 PDF</a>
-          <a class="btn" href="mailto:you@example.com">이메일</a>
-          <a class="btn" href="https://github.com/USERNAME" target="_blank" rel="noreferrer">GitHub</a>
+  <div class="wrap">
+    <!-- HERO -->
+    <header class="hero" aria-label="소개">
+      <div class="avatar" style="background-image:url('profile.jpg');" title="증명사진 자리"></div>
+      <div class="title">
+        <h1>유도우 <span class="badge">임베디드·FPGA 개발</span></h1>
+        <p>청주대학교 대학원 석사 재학 · 시스템반도체공학</p>
+        <p>임베디드 C, UART/I²C 통신, FPGA/VHDL 설계, OrCAD 회로·PCB 개발</p>
+        <div class="quick">
+          <span class="chip">📍 청주</span>
+          <a class="chip" href="mailto:ehdn4358@naver.com">✉️ ehdn4358@naver.com</a>
+          <a class="chip" href="#projects">🔗 프로젝트</a>
+          <a class="chip" href="#papers">📰 논문/발표</a>
+          <a class="chip" href="#contact">📞 연락처</a>
         </div>
-        <hr style="border:none;border-top:1px solid var(--line);margin:16px 0"/>
-        <ul style="list-style:none;padding:0;margin:0;color:var(--muted);font-size:14px">
-          <li>청주대학교 시스템반도체 석사 예정</li>
-          <li>관심: 고신뢰성 UART, PLC 화재감지, IEEE‑1588</li>
-        </ul>
-      </aside>
-
-      <!-- Content column -->
-      <div style="display:flex;flex-direction:column;gap:24px">
-        <section id="about" class="card">
-          <h2 class="section-title">소개</h2>
-          <p>FPGA/VHDL과 STM32를 연결한 <strong>고신뢰성 UART</strong>(CRC‑16/CCITT, FIFO, Majority Voting, FMC 브리지)와 <strong>DP83640 기반 PTP</strong>를 연구/구현합니다. 실제 디버깅과 문서화를 중시하며, Logic Analyzer · SignalTap · Wireshark로 재현 가능한 절차를 정리합니다.</p>
-        </section>
-
-        <section id="projects" class="card">
-          <h2 class="section-title">프로젝트</h2>
-          <div class="grid" style="grid-template-columns:repeat(2,1fr)">
-            <div class="project">
-              <h3>고신뢰성 UART (FPGA/VHDL)</h3>
-              <p class="meta">CRC‑16/CCITT · FIFO‑256 · Majority Voting · FMC</p>
-              <p>CRC‑16/CCITT(0x1021, init 0xFFFF), RX/TX FIFO, RX 다수결 필터, 7‑세그 디스플레이. STM32 FMC Bank1/NE1(8‑bit, 8080 async) 연동.</p>
-              <div><span class="tag">VHDL</span><span class="tag">Quartus</span><span class="tag">STM32FMC</span></div>
-            </div>
-            <div class="project">
-              <h3>STM32H753 ↔ DP83640 PTP</h3>
-              <p class="meta">LwIP RAW · UDP 319/320 · HW Timestamp</p>
-              <p>NO_SYS=1에서 Ping → PTP(2‑Step) 구현. MDIO, ETH DMA 비캐시 배치, MPU 정책 및 타임스탬프 검증.</p>
-              <div><span class="tag">PTPv2</span><span class="tag">LwIP</span><span class="tag">IAR</span></div>
-            </div>
-            <div class="project">
-              <h3>PLC 기반 화재감지</h3>
-              <p class="meta">NTC 이중센싱 · 차등/정온 결합 · 위치추적</p>
-              <p>전원선(UART‑over‑Powerline)으로 센서 주소/화재 위치 전송. 저가형 수신기에 위치추적 기능 이식.</p>
-              <div><span class="tag">STM32</span><span class="tag">ADC</span><span class="tag">Algorithm</span></div>
-            </div>
-            <div class="project">
-              <h3>NUCLEO‑F429 ↔ FPGA 브리지</h3>
-              <p class="meta">FMC · CRC 검증 · 7‑Seg</p>
-              <p>CoolTerm 9600‑8N1 로그 검증, IRQ(EXTI6) 및 FIFO/CRC 레지스터 맵(0x00~0x07) 문서화.</p>
-              <div><span class="tag">FMC</span><span class="tag">CRC16</span><span class="tag">Validation</span></div>
-            </div>
-          </div>
-        </section>
-
-        <section id="experience" class="card">
-          <h2 class="section-title">경험</h2>
-          <ul>
-            <li><strong>디지털 헬스케어 산학과제</strong> — LoRa 모듈, LCD, 안드로이드 앱 개발 및 펌웨어 디버깅</li>
-            <li><strong>지문인식센서 Chip MPW</strong> — OPAMP/Bias/Level‑Shifter 설계 및 PDK 전환 검증</li>
-          </ul>
-        </section>
-
-        <section id="pubs" class="card">
-          <h2 class="section-title">논문 · 발표</h2>
-          <ul>
-            <li>한국정보기술학회 2024 추계종합학술대회 — <em>학술대회 논문(Proceedings) · 분류: 기타</em></li>
-            <li>반도체·디스플레이 학회지 — <em>KCI 국내 등재학술지</em></li>
-          </ul>
-        </section>
-
-        <section id="skills" class="card">
-          <h2 class="section-title">스킬</h2>
-          <div class="pill">
-            <span>VHDL</span><span>STM32H7</span><span>ETH DMA/MPU</span><span>LwIP RAW</span><span>PTPv2</span><span>MDIO</span><span>FMC 8080</span><span>Quartus</span><span>IAR EWARM</span>
-          </div>
-        </section>
-
-        <section id="contact" class="card">
-          <h2 class="section-title">연락처</h2>
-          <p>이메일: <a href="mailto:you@example.com">you@example.com</a> · GitHub: <a href="https://github.com/USERNAME" target="_blank" rel="noreferrer">github.com/USERNAME</a></p>
-          <p class="mono">GitHub Pages 배포: 저장소명 <code>USERNAME.github.io</code>, 이 파일을 <code>index.html</code>로 커밋</p>
-        </section>
-
-        <footer style="text-align:center;color:var(--muted);padding:10px 0 24px 0">© <span id="y"></span> Yu Do‑Woo</footer>
+        <div class="cta">
+          <a class="btn" href="#contact">협업 문의하기</a>
+          <a class="btn ghost" href="#skills">스킬 보기</a>
+        </div>
       </div>
-    </div>
-  </main>
+    </header>
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click', e=>{
-        const id = a.getAttribute('href');
-        if(id.length>1){ e.preventDefault(); document.querySelector(id).scrollIntoView({behavior:'smooth'}); }
-      });
-    });
-  </script>
-</body>
-</html>
+    <!-- GRID -->
+    <div class="grid">
+      <section class="card" id="skills" aria-label="보유 기술">
+        <h2>스킬</h2>
+        <div class="skills">
