--- a/index.html
+++ b/index.html
@@ -1,110 +1,254 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>유도우 · 포트폴리오</title>
-  <meta name="description" content="임베디드 시스템 · FPGA/VHDL · 통신( UART/I2C ) 포트폴리오" />
+  <meta name="description" content="임베디드 · FPGA/VHDL · UART/CRC/FIFO 포트폴리오" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f7fafc;          /* 밝은 배경 */
+      --bg:#f8fafc;
       --card:#ffffff;
-      --ink:#1a202c;         /* 진한 글자 */
-      --muted:#4a5568;       /* 보조 글자 */
-      --brand:#2b6cb0;       /* 포인트 색 */
-      --chip:#edf2f7;
-      --ring:rgba(43,108,176,0.25);
-      --radius:20px;
-      --shadow:0 10px 30px rgba(0,0,0,0.07);
-      --shadow-sm:0 6px 16px rgba(0,0,0,0.06);
-      --max:1080px;
+      --ink:#0f172a;     /* 본문 */
+      --muted:#475569;   /* 보조 */
+      --brand:#2563eb;   /* 포인트 파랑 */
+      --chip:#eef2ff;    /* 칩 배경 */
+      --ring:rgba(37,99,235,.2);
+      --radius:18px;
+      --shadow:0 12px 32px rgba(2,6,23,.08);
+      --shadow-sm:0 6px 18px rgba(2,6,23,.06);
+      --max:1100px;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0; font-family:"Pretendard",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-      color:var(--ink); background:linear-gradient(180deg,#ffffff, var(--bg) 60%);
-      -webkit-font-smoothing:antialiased; line-height:1.6;
+      margin:0; background:linear-gradient(180deg,#fff 0%, var(--bg) 60%);
+      color:var(--ink); font-family:"Pretendard",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      -webkit-font-smoothing:antialiased; line-height:1.65;
     }
     a{color:var(--brand); text-decoration:none}
     a:hover{text-decoration:underline}
-    .wrap{max-width:var(--max); margin:0 auto; padding:24px}
+    .wrap{max-width:var(--max); margin:0 auto; padding:20px}
+    /* NAV */
+    .nav{
+      position:sticky; top:0; z-index:10; backdrop-filter:saturate(140%) blur(8px);
+      background:rgba(255,255,255,.7); border-bottom:1px solid rgba(15,23,42,.06);
+    }
+    .nav .row{display:flex; gap:14px; align-items:center; justify-content:space-between; padding:12px 20px; max-width:var(--max); margin:0 auto}
+    .brand{font-weight:800; letter-spacing:.2px}
+    .links{display:flex; gap:14px; flex-wrap:wrap}
+    .links a{padding:8px 10px; border-radius:10px}
+    .links a:hover{background:rgba(37,99,235,.08); text-decoration:none}
+    /* HERO */
     header.hero{
-      display:grid; gap:28px; grid-template-columns:140px 1fr; align-items:center;
-      background:var(--card); padding:24px; border-radius:var(--radius); box-shadow:var(--shadow);
+      display:grid; gap:26px; grid-template-columns:160px 1fr; align-items:center;
+      background:var(--card); padding:22px; border-radius:var(--radius); box-shadow:var(--shadow); margin-top:16px;
     }
     .avatar{
-      width:140px; height:140px; border-radius:18px; background:#e2e8f0 center/cover no-repeat;
+      width:160px; height:160px; border-radius:16px; background:#e2e8f0 center/cover no-repeat;
       box-shadow:var(--shadow-sm); border:2px solid #fff;
     }
-    .title h1{margin:0 0 8px; font-size:36px; letter-spacing:-0.5px}
-    .title p{margin:6px 0; color:var(--muted)}
-    .quick{
-      display:flex; flex-wrap:wrap; gap:10px; margin-top:10px
+    .title h1{margin:0 0 6px; font-size:36px; letter-spacing:-.4px}
+    .subtitle{margin:0 0 10px; color:var(--muted)}
+    .chips{display:flex; flex-wrap:wrap; gap:10px; margin-top:8px}
+    .chip{background:var(--chip); color:#3730a3; padding:8px 12px; border-radius:999px; font-size:13px}
+    .cta{display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
+    .btn{
+      display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:12px; border:none;
+      background:var(--brand); color:#fff; font-weight:700; box-shadow:var(--shadow-sm); cursor:pointer
     }
-    .chip{
-      background:var(--chip); border-radius:999px; padding:8px 12px; font-size:13px; color:#2d3748
-    }
-    .grid{display:grid; gap:22px; grid-template-columns:1fr 1fr; margin-top:26px}
-    .card{
-      background:var(--card); border-radius:var(--radius); padding:22px; box-shadow:var(--shadow);
-    }
+    .btn.ghost{background:#e2e8f0; color:#111827}
+    .btn:active{transform:translateY(1px)}
+    /* GRID */
+    .grid{display:grid; gap:22px; grid-template-columns:1fr 1fr; margin-top:24px}
+    .card{background:var(--card); border-radius:var(--radius); padding:22px; box-shadow:var(--shadow)}
     .card h2{margin:0 0 14px; font-size:20px}
     .list{display:grid; gap:12px}
     .item h3{margin:0 0 4px; font-size:16px}
     .item p{margin:0; color:var(--muted); font-size:14px}
     .skills{display:flex; flex-wrap:wrap; gap:8px}
-    .skill{background:var(--chip); border-radius:10px; padding:8px 10px; font-size:13px}
-    footer{
-      margin:28px auto 8px; max-width:var(--max); color:var(--muted); font-size:13px; text-align:center
+    .skill{background:#f1f5f9; border-radius:10px; padding:8px 10px; font-size:13px}
+    .pill{display:inline-block; padding:4px 10px; border-radius:999px; background:#e6fffb; color:#0f766e; font-size:12px; margin-left:6px}
+    .note{font-size:13px; color:var(--muted); margin-top:6px}
+    /* TIMELINE */
+    .timeline{position:relative; padding-left:18px}
+    .timeline:before{
+      content:""; position:absolute; left:5px; top:4px; bottom:4px; width:2px; background:#e2e8f0;
     }
-    .section{margin-top:22px}
-    .badge{display:inline-block; background:#ebf8ff; color:#234e77; padding:2px 8px; border-radius:8px; font-size:12px; margin-left:8px}
-    .pill{display:inline-block; padding:4px 10px; border-radius:999px; background:#e6fffa; color:#285e61; font-size:12px; margin-right:6px}
-    .cta{
-      margin-top:12px; display:flex; gap:10px; flex-wrap:wrap
+    .tl{position:relative; margin:0 0 14px}
+    .tl:before{
+      content:""; position:absolute; left:-13px; top:5px; width:10px; height:10px; background:#3b82f6; border-radius:50%;
+      box-shadow:0 0 0 3px rgba(59,130,246,.15);
     }
-    .btn{
-      display:inline-flex; align-items:center; gap:8px; background:var(--brand); color:#fff;
-      border:none; border-radius:10px; padding:10px 14px; font-weight:600; box-shadow:var(--shadow-sm);
-      transition:transform .04s ease;
-    }
-    .btn:active{transform:translateY(1px)}
-    .ghost{background:#e2e8f0; color:#1a202c}
-    @media (max-width:820px){
+    /* FOOTER */
+    footer{margin:28px auto 10px; max-width:var(--max); color:var(--muted); font-size:13px; text-align:center}
+    /* RESPONSIVE */
+    @media (max-width:880px){
       header.hero{grid-template-columns:1fr}
       .avatar{justify-self:center}
       .grid{grid-template-columns:1fr}
     }
+    /* SMALL INTERACTIONS */
+    :target{scroll-margin-top:90px}
+    .card:focus-within, .card:has(:focus){outline:2px solid var(--ring); outline-offset:2px}
   </style>
 </head>
 <body>
+  <!-- NAV -->
+  <nav class="nav">
+    <div class="row">
+      <div class="brand">유도우</div>
+      <div class="links">
+        <a href="#about">소개</a>
+        <a href="#skills">스킬</a>
+        <a href="#projects">프로젝트</a>
+        <a href="#experience">경력·학력</a>
+        <a href="#papers">논문/발표</a>
+        <a href="#contact">연락</a>
+      </div>
+    </div>
+  </nav>
+
   <div class="wrap">
     <!-- HERO -->
-    <header class="hero" aria-label="소개">
-      <div class="avatar" style="background-image:url('profile.jpg');" title="증명사진 자리"></div>
+    <header id="about" class="hero" aria-label="소개">
+      <div class="avatar" style="background-image:url('profile.jpg')" title="증명사진 자리"></div>
       <div class="title">
-        <h1>유도우 <span class="badge">임베디드·FPGA 개발</span></h1>
-        <p>청주대학교 대학원 석사 재학 · 시스템반도체공학</p>
-        <p>임베디드 C, UART/I²C 통신, FPGA/VHDL 설계, OrCAD 회로·PCB 개발</p>
-        <div class="quick">
+        <h1>유도우 <span class="pill">임베디드·FPGA</span></h1>
+        <p class="subtitle">STM32 임베디드 C · UART/CRC/FIFO · FPGA/VHDL · OrCAD 회로·PCB</p>
+        <div class="chips">
           <span class="chip">📍 청주</span>
           <a class="chip" href="mailto:ehdn4358@naver.com">✉️ ehdn4358@naver.com</a>
-          <a class="chip" href="#projects">🔗 프로젝트</a>
-          <a class="chip" href="#papers">📰 논문/발표</a>
-          <a class="chip" href="#contact">📞 연락처</a>
+          <a class="chip" href="#projects">🔗 프로젝트 보기</a>
         </div>
         <div class="cta">
-          <a class="btn" href="#contact">협업 문의하기</a>
-          <a class="btn ghost" href="#skills">스킬 보기</a>
+          <a class="btn" href="#contact">협업 문의</a>
+          <a class="btn ghost" href="#skills">스킬</a>
         </div>
+        <p class="note">※ 문구·색감은 바로 바꿔드릴 수 있어요. 사진 파일명만 <b>profile.jpg</b>로 두면 자동 표시됩니다.</p>
       </div>
     </header>
 
-    <!-- GRID -->
+    <!-- GRID 1 -->
     <div class="grid">
-      <section class="card" id="skills" aria-label="보유 기술">
+      <section id="skills" class="card" aria-label="스킬">
         <h2>스킬</h2>
         <div class="skills">
+          <span class="skill">C/Embedded</span>
+          <span class="skill">STM32 · IAR</span>
+          <span class="skill">UART · I²C · CRC-16</span>
+          <span class="skill">FPGA/VHDL</span>
+          <span class="skill">FMC(8080) 인터페이스</span>
+          <span class="skill">LoRa · UART-over-PLC</span>
+          <span class="skill">OrCAD · PCB</span>
+          <span class="skill">PSpice</span>
+          <span class="skill">Python</span>
+          <span class="skill">Java/Kotlin(Android)</span>
+          <span class="skill">디버깅 · 실험 설계</span>
+        </div>
+      </section>
+
+      <section class="card" aria-label="한 줄 소개">
+        <h2>요약</h2>
+        <p>
+          HW·SW 통합 역량을 바탕으로 고신뢰성 통신(UART+CRC+FIFO)과 실시간 데이터 처리에 강점이 있습니다.
+          깔끔한 구조화와 재현 가능한 실험 설계를 지향합니다.
+        </p>
+      </section>
+
+      <section id="projects" class="card" aria-label="프로젝트">
+        <h2>프로젝트</h2>
+        <div class="list">
+          <div class="item">
+            <h3>실시간 화재 위치 추적 시스템 (PLC·UART)</h3>
+            <p>전력선(24V) 기반 UART 통신으로 화재 위치 전송. FPGA/VHDL에서 CRC-16·FIFO 통합, 수신기 LCD 표시, FMC(8080) 연동.</p>
+          </div>
+          <div class="item">
+            <h3>IoT 가스 누출 방지 시스템</h3>
+            <p>STM32 + 센서 + DC 모터로 자동 밸브 제어, Android 앱과 연동. 학부 졸업작품 1등.</p>
+          </div>
+          <div class="item">
+            <h3>디지털 헬스케어 운동 보조 장치</h3>
+            <p>LoRa 원격 모니터링, LCD UI, Kotlin 앱. 실측 데이터 로깅·시각화.</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="experience" class="card" aria-label="경력·학력">
+        <h2>경력 · 학력</h2>
+        <div class="timeline">
+          <div class="tl">
+            <h3>청주대학교 대학원 <span class="pill">시스템반도체공학</span></h3>
+            <p class="item">석사 재학 — UART·CRC·FIFO·FPGA 수신기/감지기 연구, PLC 기반 위치추적</p>
+          </div>
+          <div class="tl">
+            <h3>청주대학교 <span class="pill">시스템반도체공학</span></h3>
+            <p class="item">학사 — 임베디드/회로/FPGA 프로젝트 다수 수행</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="papers" class="card" aria-label="논문/발표">
+        <h2>논문 · 발표</h2>
+        <ul class="list">
+          <li class="item">
+            <h3>PLC 통신 기반 실시간 화재 위치 추적 시스템</h3>
+            <p>학회지 투고/예정</p>
+          </li>
+          <li class="item">
+            <h3>IoT 재활운동 의료기기 모니터링 시스템</h3>
+            <p>한국정보기술학회 추계 종합학술대회 (2024)</p>
+          </li>
+          <li class="item">
+            <h3>연속수동운동(CPM) 의료기기 시스템 설계</h3>
+            <p>반도체디스플레이기술학회지</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="card" aria-label="자격/수상">
+        <h2>자격 · 수상</h2>
+        <ul class="list">
+          <li class="item"><h3>OPIc IM1</h3><p>영어</p></li>
+          <li class="item"><h3>학부 작품 경진대회</h3><p>IoT 가스 누출 방지 시스템 1등</p></li>
+          <li class="item"><h3>2종 보통 운전면허</h3><p>보유</p></li>
+        </ul>
+      </section>
+
+      <section class="card" aria-label="관심 분야">
+        <h2>관심 분야</h2>
+        <p>고신뢰성 통신 하드웨어(UART 디지털필터·CRC), 시간동기(PTP), 임베디드 실시간 처리, 저전력 회로 설계.</p>
+      </section>
+    </div>
+
+    <!-- CONTACT -->
+    <section id="contact" class="card" style="margin-top:22px" aria-label="연락처">
+      <h2>연락하기</h2>
+      <p>협업·채용 문의 환영합니다.</p>
+      <div class="chips">
+        <a class="chip" href="mailto:ehdn4358@naver.com">✉️ ehdn4358@naver.com</a>
+        <span class="chip">📍 충북 청주시</span>
+      </div>
+    </section>
+
+    <footer>© <span id="y"></span> 유도우 · Portfolio</footer>
+  </div>
+
+  <script>
+    // 현재 연도
+    document.getElementById('y').textContent = new Date().getFullYear();
+    // 부드러운 스크롤(기본 지원 없는 브라우저 대비)
+    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+      a.addEventListener('click', (e)=>{
+        const id = a.getAttribute('href');
+        const el = document.querySelector(id);
+        if(!el) return;
+        e.preventDefault();
+        window.scrollTo({top: el.getBoundingClientRect().top + window.scrollY - 70, behavior:'smooth'});
+      });
+    });
+  </script>
+</body>
+</html>
