--- a/index.html
+++ b/index.html
@@ -172,10 +172,19 @@
   <!-- HERO (dark greeting like the screenshot) -->
   <section class="hero">
     <div class="container">
-      <h1 class="title">반갑습니다,<br/>유도우입니다.</h1>
-      <p class="lead">
-        개인의 성장이 곧 팀과 회사의 성장이라 믿습니다. 임베디드·FPGA·네트워킹을 연결해
-        문제의 본질을 정의하고, 가설 수립–검증–개선의 사이클로 결과를 만듭니다.
+      <h1 class="title">안녕하세요,<br/>유도우입니다.</h1>
+      <p class="lead hero-intro">
+      개인의 성장이 곧 기업의 성장이라 믿고, <span class="hl">스스로 성장하기 위한 자가학습</span>에 꾸준히 몰입해 왔습니다.<br/>
+      동기부여를 위해 <span class="hl">짧은 주기의 도전</span>을 즐기며, 실험과 회고를 통해 더 효율적인 방법을 찾아갑니다.<br/>
+      학부 시절 IoT 기반 가스 누출 방지 시스템을 직접 설계·구현해 대회 1등을 수상했고,<br/>
+      지문인식 센서 MPW 및 LoRa 의료기기 산학과제에서는 펌웨어·앱·회로를 아우르며 협업 경험을 쌓았습니다.<br/>
+      <p>
+      석사과정에서 <span class="hl">PLC 기반 실시간 위치 추적 화재 감지/수신 시스템</span>을
+      회로 설계부터 PCB 제작, 펌웨어까지 전 과정을 직접 수행하여,
+      기존 열감지 방식 대비 <span class="hl">더 빠르고 정확한 감지 성능</span>을 확보했습니다.
+      </p>
+      항상 ‘내가 어떤 가치를 지닌 사람인지’, ‘무엇을 제공할 수 있는지’를 <span class="hl">생각</span>하며,<br/>
+      좋은 동료가 되고 좋은 서비스를 만들기 위해 <span class="hl">커뮤니케이션</span> 역량을 함께 단련하고 있습니다.
       </p>
       <div class="icons" aria-label="아이콘 링크">
         <a class="diamond" href="#about" title="About"><span>ⓘ</span></a>
