--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       font-weight: 800;
       color: #111; /* 다크 히어로에서 가독성 ↑ */
       background: linear-gradient(transparent 52%, rgba(255, 214, 10, .88) 0);
-      box-shadow: 0 2px 0 rgba(0,0,0,.08) inset;
+      box-shadow: 0 2px 0 rgba(255, 214, 10, .88) inset;
     }
 
     /* HERO (dark) */
