--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
     .links a{color:#111827; font-weight:600; padding:8px 10px; border-radius:10px}
     .links a:hover{background:#edf2ff; text-decoration:none}
 
-    /* 노란 마커 하이라이트 */
+    /* 노란 글자만 */
     .hero-intro .hl-yellow{
-      padding: 0 .25em;
-      border-radius: 6px;
-      font-weight: 800;
-      color: #111; /* 다크 히어로에서 가독성 ↑ */
-      background: linear-gradient(transparent 52%, rgba(255, 214, 10, .88) 0);
-      box-shadow: 0 2px 0 rgba(0,0,0,.08) inset;
+      color: #ffd600;   /* 밝은 노란색 */
+      font-weight: 700; /* 필요하면 굵게 */
     }
 
     /* HERO (dark) */
