--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
     }
     @keyframes wheel{0%{opacity:1; transform:translateY(0)} 100%{opacity:0; transform:translateY(8px)}}
 
+    /* 노란 글자만 */
+    .hero-intro .hl-yellow{
+      color: #ffd600;   /* 밝은 노란색 */
+      font-weight: 700; /* 필요하면 굵게 */
+    }
+
     /* SECTION HEADINGS (center big) */
     .section-head{
       text-align:center; margin:72px 0 36px;
@@ -169,23 +175,13 @@
     </div>
   </header>
 
-  /* 노란 마커 하이라이트 */
-  .hero-intro .hl-yellow{
-    padding: 0 .25em;
-    border-radius: 6px;
-    font-weight: 800;
-    color: #111; /* 다크 히어로에서 가독성 ↑ */
-    background: linear-gradient(transparent 52%, rgba(255, 214, 10, .88) 0);
-    box-shadow: 0 2px 0 rgba(0,0,0,.08) inset;
-  }
-
   <!-- HERO (dark greeting like the screenshot) -->
   <section class="hero">
     <div class="container">
       <h1 class="title">안녕하세요,<br/>유도우입니다.</h1>
       <p class="lead hero-intro">
-      저는 <span class="hl">꾸준함은 실력</span>이라는 신념으로 성장해 온 개발자입니다.<br/>
-      작은 노력도 매일 쌓이면 반드시 큰 성과로 이어진다는 <span class="hl">티끌 모아 태산</span>의 가치관을 바탕으로,<br/>
+      저는 <span class="hl-yellow"꾸준함은 실력</span>이라는 신념으로 성장해 온 개발자입니다.<br/>
+      작은 노력도 매일 쌓이면 반드시 큰 성과로 이어진다는 <span class="hl-yellow"티끌 모아 태산</span>의 가치관을 바탕으로,<br/>
       맡은 바에 성실히 임하며 결과를 만들어 냅니다.<br/>
       학부 시절 IoT 기반 가스 누출 방지 시스템을 직접 설계·구현해 대회 1등을 수상했고,<br/>
       디지털 의료기기 산학과제에서는 LoRa 모듈과 7·5인치 LCD 펌웨어를 구성하고,<br/>
