--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <!-- NAV -->
   <header>
     <div class="container nav">
-      <div class="brand">유도우</div>
+      <div class="brand">유도우 | 포트폴리오</div>
       <nav class="links" aria-label="주요 섹션">
         <a href="#about">ABOUT</a>
         <a href="#project">PROJECT</a>
