--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       청주대학교 일반 대학원 반도체 공학과의 석사 과정으로 재학 중입니다.<br/>
       학부 시절 <span class="hl-yellow">IoT 기반 가스 누출 방지 시스템</span>을 설계·구현해 대회 1등을 수상했으며,<br/>
       디지털 의료기기 산학과제에서는 <span class="hl-yellow">LoRa 모듈</span>과 <span class="hl-yellow">7·5인치 LCD</span> 펌웨어를 개발하고,<br/>
-      기업과 협업해 <span class="hl-yellow">실시간 운동 모니터링 안드로이드 앱</span>을 제작하며 협업 경험을 쌓았습니다.<br/>
+      <span class="hl-yellow">실시간 운동 모니터링 안드로이드 앱</span>을 혼자서 제작하며 완성해 본 경험이 있습니다.<br/>
       석사과정에서는 <span class="hl-yellow">PLC 기반 실시간 위치 추적 화재 감지/수신 시스템</span>을<br/>
       회로 설계부터 PCB 제작,펌웨어까지 전 과정을 직접 수행하여,<br/>
       기존 열감지 방식 대비 <span class="hl">더 빠르고 정확한 감지 성능</span>을 확보했습니다.<br/>
