--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="container">
       <h1 class="title">안녕하세요,<br/>유도우입니다.</h1>
       <p class="lead hero-intro">
-      청주대학교 일반 대학원 반도체 공학과의 석사 과정으로 재학 중입니다.<br/>
+      청주대학교 반도체 공학과의 석사 과정으로 재학 중입니다.<br/>
       학부 시절 <span class="hl-yellow">IoT 기반 가스 누출 방지 시스템</span>을 설계·구현해 대회 1등을 수상했으며,<br/>
       디지털 의료기기 산학과제에서는 <span class="hl-yellow">LoRa 모듈</span>과 <span class="hl-yellow">7·5인치 LCD</span> 펌웨어를 개발하고,<br/>
       <span class="hl-yellow">실시간 운동 모니터링 안드로이드 앱</span>을 혼자서 제작하며 완성해 본 경험이 있습니다.<br/>
